Update video urls

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           onclick="showAbout()">About</button>
       </div>
 
-      <div class="flex-1">
+      <div class="flex-1" style="min-height: 320; max-height: 900; overflow-y: scroll;">
         <div class="mainpage mt-20 h-full w-full md:w-5/6 lg:w-4/5 ml-auto mr-auto" style="float:center">
 
           <div class="about hidden" id="about">
@@ -205,6 +205,10 @@
               <p>&nbsp;</p>
               <p><strong>Ultrasonic&nbsp;sensor video</strong></p>
               <p>&nbsp;</p>
+              <video controls> 
+                <source src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVFNVnpFSE1Hd3JCOFRRc2w0PS0tOTYzYjZjMGVkM2VhYmFjZmRkM2I1MGM5OTg1NDZlZGM3M2ZlMzMyNA.mp4"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
           <!--<p><iframe style="width: 400px; height: 225px; display: inline-block;" title="IMG_2713.MOV的视频播放器"
                   data-media-type="video"
                   src="https://saic.instructure.com/media_objects_iframe/m-3XTt1ci9G1FronvGLx9hB3ffWr9B8xJC?type=video"
@@ -218,6 +222,10 @@
               <p>&nbsp;</p>
               <p><strong>P5js&amp; ultrasonic sensor video</strong></p>
               <p>&nbsp;</p>
+              <video controls> 
+                <source src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVFsV0RFSE1Hd3JCNm5Rc2w0PS0tN2E0YWU5YWExN2E5ZmZmMzk5MjA2NDQwMmJlMDAyZTBhYTJiZGYyNQ.mp4"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
              <!--<p><iframe style="width: 400px; height: 225px; display: inline-block;" title="IMG_2716.MOV的视频播放器"
                   data-media-type="video"
                   src="https://saic.instructure.com/media_objects_iframe/m-BamcT4jBxuMMjJxoAQuX3yQicPLYVP?type=video"
@@ -230,6 +238,10 @@
             <finalDiv class="hidden mt-6" id="cher_final" class="ab">
               <h2><strong>"Untitled" by Cher Feng</strong></h2>
               <p>&nbsp;</p>
+              <video controls> 
+                <source src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVFlUnpzSE1Hd3JCNFRRc2w0PS0tOTM0NDNiMjRjNjY1MmQ3ZjQ2YzU4YjYyNTBlZDg4MTFiZGQ0YmNhMw.mp4"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
               <!--<p><iframe style="width: 400px; height: 250px; display: inline-block;"
                   title="Video player for finalats.mp4" data-media-type="video"
                   src="https://saic.instructure.com/media_objects_iframe/m-2ZJZodA5LofGwroXeqFuMdvb4pX7toFJ?type=video"
@@ -307,6 +319,10 @@
                 tool as a means of visual expression through sonic imagery.</p>
               <p>&nbsp;</p>
               <p>*** The volume of this video can be loud in certain moments, watch with caution***</p>
+              <video controls> 
+                <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26401cb4-73b4-432b-ab34-abac013a4e2b"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
              <!-- <p><iframe style="width: 720px; height: 405px;" title="A&amp;T Final Project Documentation"
                   src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26401cb4-73b4-432b-ab34-abac013a4e2b"
                   width="720" height="405" allowfullscreen="allowfullscreen"
@@ -345,53 +361,70 @@
                 looking at some sculptures from The KTDuffy Project I was inspired to create some readymade sculptures
                 involving making a few of my outlets more accessible using online extension cords and adapters.</p>
               <p>&nbsp;</p>
-              <p><img style="max-width: 320px; max-height: 320px;"
+              <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170180853/preview?wrap=1&amp;verifier=5qFOuP9mk0aVhY8EjOigRQwQ4wze9f8eoe6LUScw"
                   alt="IMG_2730.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170180853"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170180942/preview?wrap=1&amp;verifier=jdyw5Ra7e1MqaIb4y9KcKMZ4syHOYXDtUxeXuMh1"
                   alt="IMG_2443.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170180942"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181589/preview?wrap=1&amp;verifier=L4YttKWzxFwzdBSPVRzKaek0ZZuRbPQA7ux3Z0QM"
                   alt="IMG_2736.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181589"
-                  data-api-returntype="File" />&nbsp;<img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" />&nbsp;<img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181037/preview?wrap=1&amp;verifier=pRR1vxradHfaN4uqlXO6tfhaisVzptx1VynTg7IO"
                   alt="IMG_2724.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181037"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181067/preview?wrap=1&amp;verifier=IXA63cAOpY48zyxbh0xWVWBgq3cVAIIktz0OT342"
                   alt="IMG_2725.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181067"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181412/preview?wrap=1&amp;verifier=DQ8ZTnlWhCnIFAAcp4OAoKV7NhVkm5z1iPGpsTWQ"
                   alt="IMG_2720.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181412"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181476/preview?wrap=1&amp;verifier=1TCMgA1q3oL7LZwy5HEWndUDHDJKZfXOj89rHNuj"
                   alt="IMG_2721.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181476"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181544/preview?wrap=1&amp;verifier=qDepXbDHis5OGOhaFmhUfNevHrpqqIDw6o5vjdMy"
                   alt="IMG_2735.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181544"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181659/preview?wrap=1&amp;verifier=WZLBKvawGLbf12kLJkM6GfTFqmobw3PO0hr0FQIo"
                   alt="IMG_2772-1.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181659"
-                  data-api-returntype="File" /> <img style="max-width: 320px; max-height: 320px;"
+                  data-api-returntype="File" /> <img class="mb-2" style="max-width: 320px; max-height: 320px;"
                   src="https://saic.instructure.com/users/8694424/files/170181715/preview?wrap=1&amp;verifier=zohVdVHe7hlFGW7G5KICMvQ8sXkagKf5AHpE0YZS"
                   alt="IMG_2761.jpg"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8694424/files/170181715"
-                  data-api-returntype="File" /></p>
+                  data-api-returntype="File" />
+              
               <p>The new objects worked well as they created a central location in the middle of the room in which I
                 could plug my phone inform many different angles and charge my phone while I used it in comfort with the
                 provided 3-foot cable it came with. It quickly dawned on me that I would have to make these types of
                 sculptures for inaccessible plug in my house and while they may have been fun to make there was still
                 the issue of having the struggle to plug them in in the first place. At that point, the solution dawned
                 on me what if you only ever had to plug your phone once and never have to go without charge again...</p>
+                <video controls> 
+                  <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D1653a0ca-79ff-4a3c-8e80-abad016a383f"
+                    width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                  </video> 
+                  <video controls> 
+                    <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D95fe7f04-9966-4fb3-94e2-abad016a8ac3"
+                      width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                    </video> 
+                    <video controls> 
+                      <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3Db6e116d4-b19f-4ef8-88f4-abad01699339"
+                        width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                      </video> 
+                      <video controls> 
+                        <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D6e512e0f-5b9c-4ecd-bdf5-abad016b0081"
+                          width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                        </video> 
               <!--<p><iframe style="width: 720px; height: 405px;" title="IMG_2744"
                   src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D1653a0ca-79ff-4a3c-8e80-abad016a383f"
                   width="720" height="405" allowfullscreen="allowfullscreen"
@@ -415,7 +448,15 @@
             </finalDiv>
             <!--jingzhou-->
             <finalDiv class="hidden mt-6" id="jingzhou_final" class="ab">
-              <!--<p><iframe style="width: 720px; height: 405px;" title="WeChat_20200430212204"
+              <video controls> 
+                <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26e1a54f-c06a-4995-88fc-abae000d6bcf"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
+                <video controls> 
+                  <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D850b04b3-dba6-40a4-970b-abae0032eb43"
+                    width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                  </video> 
+              <!-- <p><iframe style="width: 720px; height: 405px;" title="WeChat_20200430212204"
                   src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D1a67c7b7-057d-4f80-9945-abae0032ddfb"
                   width="720" height="405" allowfullscreen="allowfullscreen"
                   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
@@ -442,6 +483,11 @@
             <!--lucas-->
             <finalDiv class="hidden mt-6" id="lucas_final" class="ab">
               <p><span style="font-size: 14pt;"><strong>Life Clock </strong>(1 Minute)</span></p>
+              <video controls> 
+                <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26e1a54f-c06a-4995-88fc-abae000d6bcf"
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video> 
+                <iframe src="https://editor.p5js.org/lfland/embed/VuzND3Kv9" width="700" height="500"></iframe>
               <!--<p><iframe style="width: 720px; height: 405px;" title="Life Clock copy"
                   src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26e1a54f-c06a-4995-88fc-abae000d6bcf"
                   width="720" height="405" allowfullscreen="allowfullscreen"
@@ -489,11 +535,11 @@
                 a glowing sphere that would change the skybox. I wanted to actually have the game take the players
                 webcam video and make that the skybox. Kind of like my code sketchbook 4(I never got this to work
                 however.)</p>
-             <!-- <p><iframe style="width: 720px; height: 405px;" title="final video"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D91cb3fe2-19f3-49cd-b088-abae00c8095a"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>-->
+                <br>
+                <video controls> 
+                  <source src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D91cb3fe2-19f3-49cd-b088-abae00c8095a"
+                    width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                  </video> 
             </finalDiv>
             <!--rong-->
             <finalDiv class="hidden mt-6" id="rong_final" class="ab">
@@ -501,14 +547,14 @@
               <p><a href="https://editor.p5js.org/RongBao/present/aEEnp00ef" target="_blank"
                   rel="noopener">https://editor.p5js.org/RongBao/present/aEEnp00ef</a>&nbsp;</p>
 
-              <!--<div id="media_object_m-5Xjiruq3J1MdtsHuQ9x1Vwga4Jj4suW3" style="width: 768px; height: 432px;"><iframe
-                  style="width: 300px; height: 169px;"
-                  src="https://saic.instructure.com/media_objects_iframe/m-5Xjiruq3J1MdtsHuQ9x1Vwga4Jj4suW3"
-                  width="100%" height="100%"></iframe></div>
-              <div id="media_object_m-5X9xgJP739yvhSrSzemYBzdzDVTgCuRb" style="width: 768px; height: 432px;"><iframe
-                  style="width: 300px; height: 169px;"
-                  src="https://saic.instructure.com/media_objects_iframe/m-5X9xgJP739yvhSrSzemYBzdzDVTgCuRb"
-                  width="100%" height="100%"></iframe></div>-->
+              <video controls> 
+                <source src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVQ5UHl3SE1Hd3JCOFBLc2w0PS0tN2Q0N2YzMWY3OTFkMmVlMDNiZmMyOGFkOTRlNzYxY2RlMDYzNjdhMg.mp4">
+                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                </video>
+                <video controls><source src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVQ2UHl3SE1Hd3JCMExMc2w0PS0tZTJmYWRkYzQ3NzdlMjZkZjdhYzY4MzhmMGU1NTMyNGM4MWNjNTIwNg.mp4">
+                    width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                  </video>
+                
             </finalDiv>
             <!--russell-->
             <finalDiv class="hidden mt-6" id="russell_final" class="ab">
@@ -709,13 +755,14 @@
                 p5js, the graphic will change accordingly due to the heartbeat. I realized my project has changed due to
                 the pandemic as the final version focuses more on the graphic instead of meditation, so I titled it
                 "Shape of your heart" to fit the current outcome.&nbsp;</p>
+                <br>
               <p>Link to my p5js sketch: <a href="https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9" target="_blank"
                   rel="noopener">https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9</a></p>
-              <!--<p><iframe style="width: 400px; height: 225px; display: inline-block;"
-                  title="Video player for Ats Final .mp4" data-media-type="video"
-                  src="https://saic.instructure.com/media_objects_iframe/m-47Z83wCgvQ4YWbn4S4KHUwpQYZL2uv1q?type=video"
-                  allowfullscreen="allowfullscreen" allow="fullscreen"
-                  data-media-id="m-47Z83wCgvQ4YWbn4S4KHUwpQYZL2uv1q"></iframe></p>-->
+                  <br>
+                  <video controls>              
+                    <source src="https://iad.cdn.nv.instructuremedia.com/originals/o-481HfJw8c4uTx6cD4XBy5PmEjRobxM4E/transcodings/t-4a9fdhkLbHuerF5Ddcsethyg4nXDK9Po.mp4?&Expires=1588775136&Signature=US4wvXhpEHbr~LXjznI2pHH9~hyrhZJGNa1C4Tapi9IZnIxoxR7GJHuBDAFPEjrFNZQhBPRk35nJgySeq4oAwbwEgtfaWQjIBUINuC8Ux6C5hxvlecoi1lpBKJxXJHgXeqY1LYb4Bo6QPjr6rqoYOpZ0EdDxO8ytneHCwR~MACmLdcAXM59HEt2g66x4ifYZ6EG3VNxoN7C6Ez8YhCkbYFjzaCgDogwYm5sj-bwBWIqzvrgLe~JgegY4wn7vKWmGqShgwwbu5RBTygOrkBZol~KWMEMzffJoR-ixaBDQ9ow3RSSyX6LQTPSJpXpwVXhI5-gScQQRoKxSo8QI2UTSfA__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ" 
+                    width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
+                  </video>
               </finalDiv>
             <!--winnie-->
             <finalDiv class="hidden mt-6" id="winnie_final" class="ab">
