--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
               onclick="showFinalProject('jeff')">Jeffrey Kaya</button>
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
               onclick="showFinalProject('jingzhou')">Jingzhou Long</button>
-            <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
-              onclick="showFinalProject('lauren')">Lauren Chaszewski</button>
+          <!-- <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
+              onclick="showFinalProject('lauren')">Lauren Chaszewski</button>--> 
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
               onclick="showFinalProject('lucas')">Lucas Flanders</button>
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
