--- a/index.html
+++ b/index.html
@@ -500,7 +500,25 @@
             </finalDiv>
             <!--minky-->
             <finalDiv class="hidden mt-6" id="minky_final" class="ab">
-              <h2>Add Minky Here</h2>>
+              <p>TW—sexual exploitation, objectification of women, misogyny</p>
+              <h2><strong>Circuits, Codes, and Sex Crime</strong>></h2>>
+              <img src="../assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
+              <p><strong>Description:</strong></p>
+              <p>This is an interactive point-and-click piece, where you can click on buttons that ultimately lead to one outcome. I have designed these buttons to reflect on how there is a trend and therefore a repetition in mistreating/sexually exploiting women.</p>
+              <iframe src="https://editor.p5js.org/Minky/embed/KoSJFV5Tt"></iframe>
+              <p><Strong>Idea behind the project:</Strong></p>
+              <p>When I first found out about the Nth Room, I thought it was a simple rumor, a conspiracy that common man-haters gathered together to deepen their means of hate. However this was as true as it could be and I regret not paying much attention to the case much sooner.</p>
+                <br>
+               <p>The Nth Room Case is a criminal case that took place online. There were "rooms" on the Telegram app, where sexually exploitive videos and photos were spread. These contents were created by blackmailing the victims, at least 103 confirmed, including 26 minors. The most maddening part is that even though one of the main individuals who were at the center of this crime was arrested, the rooms are still running as if nothing has changed.</p> 
+                <br>
+                <p>At least 10,000 people used the chatrooms, with some paying up to $1,200 (£1,000) for access. And compared to that number only a hand-full has been arrested or turned themselves in. Even more unbelievable is the sentences they have gotten; one of the main individuals that were hold responsible for running these "rooms," got 3 years and 6 months for his crime. And such ridiculously light charge, unfortunately and infuriatingly, is a highly common sentence given to sex criminals in South Korea.</p>
+                <br>
+                <p>I have thought about how this is happening; how women's' rights seem to diminish as the years go by in this country. And I concluded that we have come to this stage because of cycle/succession of misogyny. And not only that—even if not for misogyny, I believe that the law is far too generous to the criminals, especially sex criminals who claim their unconscious, "weak" state of minds, "admitting" that they have committed the crime because they were drunken senselessly and would never take such terrible, terrible misstep if he were sober.</p>
+                <br>
+                <p>What I am trying to conclude here is that this is all happening because it has already happened in the past. Too many children were molested, raped, and killed—sometimes barely surviving. Too many women were killed before a proper investigation took place. Too many men were condoned for their crimes, because "boys will be boys." so it is like a circuit that simply repeats the same outcome as time is run through our realities.</p>
+                <br>
+                <p>It always start off from such a "small" thing. Seemingly indirect, subtle bending of rules to begin with. Then you push some more. And finally the line or morality snaps into justification or dissolves into excuses. Maybe you were first encouraged by or dared into committing a very minor crime. People let you off the hook. Next time you realize you're willingly engaging yourself on your own.</p>
+
             </finalDiv>
             <!--os-->
             <finalDiv class="hidden mt-6" id="os_final" class="ab">
