--- a/index.html
+++ b/index.html
@@ -502,10 +502,10 @@
             <finalDiv class="hidden mt-6" id="minky_final" class="ab">
               <p>TW—sexual exploitation, objectification of women, misogyny</p>
               <h2><strong>Circuits, Codes, and Sex Crime</strong>></h2>>
-              <img src="../assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
+              <img src="/assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
               <p><strong>Description:</strong></p>
               <p>This is an interactive point-and-click piece, where you can click on buttons that ultimately lead to one outcome. I have designed these buttons to reflect on how there is a trend and therefore a repetition in mistreating/sexually exploiting women.</p>
-              <iframe src="https://editor.p5js.org/Minky/embed/KoSJFV5Tt"></iframe>
+              <iframe src="https://editor.p5js.org/Minky/embed/KoSJFV5Tt" width="400" height = "400"></iframe>
               <p><Strong>Idea behind the project:</Strong></p>
               <p>When I first found out about the Nth Room, I thought it was a simple rumor, a conspiracy that common man-haters gathered together to deepen their means of hate. However this was as true as it could be and I regret not paying much attention to the case much sooner.</p>
                 <br>
