--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                   from Kristin.&nbsp;</span></p>
             </finalDiv>
             <!--minky-->
-            <finalDiv class="hidden mt-6" id="minky_final" class="ab">
+            <finalDiv class="hidden mt-6 mb-6" id="minky_final" class="ab">
               <p>TW—sexual exploitation, objectification of women, misogyny</p>
               <h2><strong>Circuits, Codes, and Sex Crime</strong>></h2>>
               <img src="/assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
@@ -518,7 +518,7 @@
                 <p>What I am trying to conclude here is that this is all happening because it has already happened in the past. Too many children were molested, raped, and killed—sometimes barely surviving. Too many women were killed before a proper investigation took place. Too many men were condoned for their crimes, because "boys will be boys." so it is like a circuit that simply repeats the same outcome as time is run through our realities.</p>
                 <br>
                 <p>It always start off from such a "small" thing. Seemingly indirect, subtle bending of rules to begin with. Then you push some more. And finally the line or morality snaps into justification or dissolves into excuses. Maybe you were first encouraged by or dared into committing a very minor crime. People let you off the hook. Next time you realize you're willingly engaging yourself on your own.</p>
-
+                <br>
             </finalDiv>
             <!--os-->
             <finalDiv class="hidden mt-6" id="os_final" class="ab">
