--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <finalDiv class="hidden mt-6 mb-6" id="minky_final" class="ab">
               <p>TW—sexual exploitation, objectification of women, misogyny</p>
               <h2><strong>Circuits, Codes, and Sex Crime</strong></h2>
-              <img src="/assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
+              <img src="https://saic-ats.github.io/ATSPractices-Spring2020/assets/minky.png"style="max-width: 320px; max-height: 320px;"></img>
               <p><strong>Description:</strong></p>
               <p>This is an interactive point-and-click piece, where you can click on buttons that ultimately lead to one outcome. I have designed these buttons to reflect on how there is a trend and therefore a repetition in mistreating/sexually exploiting women.</p>
               <iframe src="https://editor.p5js.org/Minky/embed/KoSJFV5Tt" width="600" height = "480"></iframe>
