--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
               onclick="showFinalProject('jeff')">Jeffrey Kaya</button>
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
               onclick="showFinalProject('jingzhou')">Jingzhou Long</button>
-          <!-- <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
-              onclick="showFinalProject('lauren')">Lauren Chaszewski</button>--> 
+           <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
+              onclick="showFinalProject('lauren')">Lauren Chaszewski</button> 
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
               onclick="showFinalProject('lucas')">Lucas Flanders</button>
             <button class="font-bold mr-4 text-blue-500 mb-4 hover:text-gray-700 focus:outline-none"
@@ -477,7 +477,8 @@
             </finalDiv>
             <!--lauren-->
             <finalDiv class="hidden mt-6" id="lauren_final" class="ab">
-              <h2>Add Lauren Here</h2>>
+              <p>click link, doesn't work on mobile, computers only</p>
+              <a href="https://lechas.wixsite.com/arttechfinal "></a>
             </finalDiv>
             <!--lucas-->
             <finalDiv class="hidden mt-6" id="lucas_final" class="ab">
@@ -788,16 +789,8 @@
               <p>You accidentally get into the wrong zoom call, a group project meeting full of strangers.&nbsp;However,everyone continues the meeting normally. No one react&nbsp;</p>
               <p>to your entrance. Why is that?</p>
               <p>&nbsp;</p>
-              <p>Work in Progress</p>
-              <p>---------------------</p>
-              <p>p5.js editor: <a href="https://editor.p5js.org/wchen15/sketches/s7Kvz9SaA" target="_blank"
-                  rel="noopener">https://editor.p5js.org/wchen15/sketches/s7Kvz9SaA</a></p>
-              <p>I'm still working on how to layer a &nbsp;webcam view onto the video I made (attached below). p5.js cannot handle files over 5 MB,</p>
-              <p>&nbsp;so I'll have to set it up in other hosting platforms without file size limitations, after setting up the code that activate the webcam at certain timing.&nbsp;</p>
-              <p>&nbsp;</p>
-              <p><iframe src="https://www.youtube.com/embed/vMrkoCLuxjU" width="560" height="315"
-                  allowfullscreen="allowfullscreen"
-                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe></p>
+              <p><a href= "https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/"></a></p>
+              <p><iframe src="'https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/' width='560' height='315'"></iframe></p>
             </finalDiv>
             <!--test-->
             <finalDiv class="hidden mt-6" id="sherrieFinal_final" class="ab">
