--- a/index.html
+++ b/index.html
@@ -789,6 +789,7 @@
               <p>You accidentally get into the wrong zoom call, a group project meeting full of strangers.&nbsp;However,everyone continues the meeting normally. No one react&nbsp;</p>
               <p>to your entrance. Why is that?</p>
               <p>&nbsp;</p>
+              <p>follow the link below. (it can take a few minutes to load)</p>
               <p><a href= "https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/"></a></p>
               <p><iframe src="'https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/' width='560' height='315'"></iframe></p>
             </finalDiv>
