--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           onclick="showAbout()">About</button>
       </div>
 
-      <div class="flex-1" style="min-height: 320; max-height: 900; overflow-y: scroll;">
+      <div class="flex-1" style="min-height: 320; max-height: 900; overflow: scroll;">
         <div class="mainpage mt-20 h-full w-full md:w-5/6 lg:w-4/5 ml-auto mr-auto" style="float:center">
 
           <div class="about hidden" id="about">
@@ -507,21 +507,18 @@
               <p><span style="font-size: 14pt;"><strong>Life Clock </strong>(1 Minute)</span></p>
               <video controls>
                 <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26e1a54f-c06a-4995-88fc-abae000d6bcf"
+                  src="https://notorious-prod.s3.amazonaws.com/originals/o-U9iMunx8dvVAuYAPvNKBhRTs64SNQ81.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=ASIAZIHRSNQUPDR2L7XC%2F20200507%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20200507T172909Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEIn%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJIMEYCIQDN9gffODGq7gQqKYGTYa7TvI383Wh24UhapwKH8M6e7QIhAOGhB28QKXNxXt83HLCAcrZo8Z%2FMWBvlosvzZOofJBf0Kr0DCML%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEQAhoMNjM2MTYxNzgwNzc2IgzivIBZqmzpVuxECtkqkQOgDj2%2FjrC3e1jnAkjxQr2arpHCpeYC6sgHiU3%2FKjCq2pkVy%2FERpDc6KH8Sp57Mht67iUS4StAbIRarzJARrznyM9y%2BOJ3X7qI7%2B3FyPL3e9DAjet2TR87aclwvoXl%2BVLniD5kDyxeGxkkIjEdwpD7oeJ3J9YRWWQdjdqeIN%2BG%2BiURa8BG3jNTchI0AftOVvUlqYV5WlW7UMUHT6RFjEXbvQK6KjwZ2kjhQL1Yj5lKQMyCkDnf38nRBG9Xl5VwQSp%2FL9ET16CZUYP3SPWfTQXPhyZkPJeLfdq8FBXbPGA2ZrAVvXkCCg7jdo%2Bzp%2B7mrDVxc%2Bzg7k7LFFYOtJImQQgxchrw%2FJ9sertq3Bo2vhQWat68C%2FNOcR5%2FFu%2FTjRcTbHm8L%2BQ5C1cZXLnRp9prAJ1svrxWmbVYnUEE3iedTNRfkNw84gB31%2Bvbo1%2FlgYJMsXcTRk3fS5U7D3CVNCKiLYPq8z5kKltJEBe%2BNdWPEIn4Bn0b2dsLvp3fnNp3Pm47p%2F11RkJo5i6dJbZa%2BrlNAnWDveDCt79D1BTrqAcV6A0G2JtWrrcoM3EbD%2BC3ra1OHlSClHHxzS8z5ODSV0QS%2BNu22HGxqnQRmBnOOD0Wttbegc6ZEOQ9jieTcEfO8F0PwN3eNKjlTf3EXJW3Z8OXSDmNUtSbI7tYXHDup%2BjXciPSyNjr27YIPs40ts0EuVxgj2A2Gb01bnVDT3LKf2W%2FSGucIv0eAAr%2FQhaxMXGlerd8XyOssSYI3npU16zyHhmCn7G%2FN5XuEbRSJRhs2tVRw0uUBhJGo3x%2BPTiJmtYK9dKu0xNAzCnT0XF5jddVTR51J9xAxaDlve%2BchdQBaRC%2FEVof4xI9NJw%3D%3D&X-Amz-Signature=ed54e4c21c1103698478ae46f21e4ec8ccf738b1a3f582165342e334d8f08307"
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
-              <iframe src="https://editor.p5js.org/lfland/embed/VuzND3Kv9" width="700" height="500"></iframe>
-              <!--<p><iframe style="width: 720px; height: 405px;" title="Life Clock copy"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26e1a54f-c06a-4995-88fc-abae000d6bcf"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>-->
+              <br>
               <p class="p1"><span class="s1">This project began as an attempt to create a clock that would count the
-                  time elapsed from the date and time of my birth in years, months, days, hours, minutes, and seconds (
-                  June 22, 2000 at 6:46 pm ). This "clock" is an accurate age counter. The <i>Life Clock </i>acts as
-                  both an art object and a personal tool. This was coded in p5.js with substantial help and guidance
-                  from Kristin.&nbsp;</span></p>
+                time elapsed from the date and time of my birth in years, months, days, hours, minutes, and seconds (
+                June 22, 2000 at 6:46 pm ). This "clock" is an accurate age counter. The <i>Life Clock </i>acts as
+                both an art object and a personal tool. This was coded in p5.js with substantial help and guidance
+                from Kristin.&nbsp;</span></p>
+              <br>
+              <iframe src="https://editor.p5js.org/lfland/embed/VuzND3Kv9" width="700" height="500"></iframe>
             </finalDiv>
             <!--minky-->
             <finalDiv class="hidden mt-6 mb-6" id="minky_final" class="ab">
