--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
               <br>
               <video controls>
                 <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D91cb3fe2-19f3-49cd-b088-abae00c8095a"
+                  src="https://www.youtube.com/embed/T1Tu08Fb25Y"
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
@@ -828,11 +828,8 @@
               <p>Link to my p5js sketch: <a href="https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9" target="_blank"
                   rel="noopener">https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9</a></p>
               <br>
-              <video controls>
-                <source
-                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-481HfJw8c4uTx6cD4XBy5PmEjRobxM4E/transcodings/t-4a9fdhkLbHuerF5Ddcsethyg4nXDK9Po.mp4?&Expires=1588775136&Signature=US4wvXhpEHbr~LXjznI2pHH9~hyrhZJGNa1C4Tapi9IZnIxoxR7GJHuBDAFPEjrFNZQhBPRk35nJgySeq4oAwbwEgtfaWQjIBUINuC8Ux6C5hxvlecoi1lpBKJxXJHgXeqY1LYb4Bo6QPjr6rqoYOpZ0EdDxO8ytneHCwR~MACmLdcAXM59HEt2g66x4ifYZ6EG3VNxoN7C6Ez8YhCkbYFjzaCgDogwYm5sj-bwBWIqzvrgLe~JgegY4wn7vKWmGqShgwwbu5RBTygOrkBZol~KWMEMzffJoR-ixaBDQ9ow3RSSyX6LQTPSJpXpwVXhI5-gScQQRoKxSo8QI2UTSfA__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
+              <iframe src="https://player.vimeo.com/video/416088646" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              <p><a href="https://vimeo.com/416088646">Ats Final</a> from <a href="https://vimeo.com/user102571621">Tim Zhang</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
               </video>
             </finalDiv>
             <!--winnie-->
