--- a/index.html
+++ b/index.html
@@ -601,12 +601,7 @@
                 webcam video and make that the skybox. Kind of like my code sketchbook 4(I never got this to work
                 however.)</p>
               <br>
-              <video controls>
-                <source
-                  src="https://www.youtube.com/embed/T1Tu08Fb25Y"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
-              </video>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/T1Tu08Fb25Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </finalDiv>
             <!--rong-->
             <finalDiv class="hidden mt-6" id="rong_final" class="ab">
