--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               <p>&nbsp;</p>
               <video controls>
                 <source
-                  src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVFlUnpzSE1Hd3JCNFRRc2w0PS0tOTM0NDNiMjRjNjY1MmQ3ZjQ2YzU4YjYyNTBlZDg4MTFiZGQ0YmNhMw.mp4"
+                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-2ZQgK1Zn2SyQ2dGxotcKDvsujwRBike3/transcodings/t-31da9WyzjVKULrfPB4DRtL28Cn6CEwiX.mp4?&Expires=1588973359&Signature=cD0rTRdMTmJuGf86o58REty3w1m2F5LH~a78lvg53dwzPvuvRPy43gqL9egYqSQmZJadZVpZ5bpXPIaxq~qf2e~PuBN-lR5YZyStCKX7hcRTePxH~bEUH53Yu0dIpgVe6XjJU0vCVvl3bB6tU5WpRO~LQuUtsd9FerqXWGJRw6t-UM-V54cSu7gD903SlBNyGk~X5lBHvQed-nab4Yv1MptsVggQ3J8SMn0f-dZYh~qEjadptszcN7x61pQVRnW7dZSiBRsf6jx9fWDFEcjlixXVtzI3j3P71aArMBu8~qZIPw0ET0dVQnp5tguCQgGkv1IKpqIdKyNcIvrqlVwUCg__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ"
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
